templates/angulardeployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
   name: angular
   namespace: default

spec:
   selector:
      matchLabels:
         app: angular
   replicas: 1

   template:
      metadata:
         name: angular
         labels:
            app: angular

      spec:
         containers:
            - name: angular
              image: 'mariemayadi/frtend:latest'
              imagePullPolicy: Always
