templates/angularservice.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: angular
spec:
  #type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
   # nodePort: 30101
  selector:
    app: angular
