templates/mysqlservice.yaml

apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql
    tier: database
  name: mysqldb
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysql
