templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: public
spec:
  rules:
    - host: mari.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular
                port:
                  number: 80
    - host: mari.api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-service
                port:
                  number: 8089
